<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:text="@string/spiel_hinzuf_gen"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblName"
                android:layout_width="129dp"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <EditText
                android:id="@+id/txtName"
                android:layout_width="371dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/risiko"
                android:inputType="textPersonName"
                android:autofillHints="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblAge"
                android:layout_width="129dp"
                android:layout_height="wrap_content"
                android:text="@string/altersempfehlung" />

            <EditText
                android:id="@+id/txtAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/_12"
                android:inputType="numberDecimal"
                android:autofillHints="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblNumberOfPlayers"
                android:layout_width="129dp"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="12sp"
                android:text="@string/anzahl_der_spieler"
                android:textAlignment="viewStart" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/txtMinNumberOfPlayers"
                    android:layout_width="112dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/_2"
                    android:inputType="numberDecimal"
                    android:textAlignment="center"
                    android:autofillHints="" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/till"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/txtMaxNumberOfPlayers"
                    android:layout_width="112dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/_6"
                    android:inputType="numberDecimal"
                    android:textAlignment="center"
                    android:autofillHints="" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblDuration"
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:text="@string/laufzeit_pro_runde" />

            <EditText
                android:id="@+id/txtDuration"
                android:layout_width="282dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/_60"
                android:inputType="numberDecimal"
                android:autofillHints="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblGenre"
                android:layout_width="127dp"
                android:layout_height="wrap_content"
                android:text="@string/genre" />

            <Spinner
                android:id="@+id/spinGenre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/spinnerGenre" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblDescription"
                android:layout_width="53dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/beschreibung" />

            <EditText
                android:id="@+id/txtDescription"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/beschreibung_des_spiels"
                android:inputType="textMultiLine"
                android:autofillHints="" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="163dp"
            android:layout_height="90dp"
            android:layout_marginTop="43dp"
            app:srcCompat="@mipmap/ic_launcher"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/btnCreateGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:insetTop="40dp"
            android:text="@string/spiel_hinzuf_gen"
            app:icon="@android:drawable/ic_input_add" />

        <Button
            android:id="@+id/btnToMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zur_hauptseite"
            app:icon="?attr/homeAsUpIndicator" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>